@@ -2,7 +2,7 @@
 
 ; HM NIS Edit Wizard helper defines
 !define PRODUCT_NAME                         "AppSnap"
-!define PRODUCT_VERSION                      "1.0"
+!define PRODUCT_VERSION                      "1.01"
 !define PRODUCT_PUBLISHER                    "Ganesh Viswanathan"
 !define PRODUCT_WEB_SITE                     "http://www.genotrance.com"
 !define PRODUCT_UNINST_KEY                   "Software\Microsoft\Windows\CurrentVersion\Uninstall\${PRODUCT_NAME}"
