@@ -22,8 +22,8 @@ uninstparam   = /S _?=#INSTALL_DIR#
 category      = Internet
 describe      = Web Browser
 website       = http://www.getfirefox.com
-scrape        = ftp://ftp.mozilla.org/pub/mozilla.org/firefox/releases/
-version       = /([0-9]\.[0-9]+[.0-9]*)/
+scrape        = http://releases.mozilla.org/pub/mozilla.org/firefox/releases/
+version       = ([0-9]\.[0-9]+[.0-9]*)/
 download      = ftp://ftp.mozilla.org/pub/mozilla.org/firefox/releases/#VERSION#/win32/en-US/
 filename      = Firefox Setup #VERSION#.exe
 instparam     = -ms
@@ -31,6 +31,21 @@ upgrades      = true
 chinstdir     =
 uninstall     = Mozilla Firefox (#MAJORMINOR_VERSION#)
 uninstparam   = -ms
+
+[Gaim]
+
+category      = Internet
+describe      = Multi-protocol IM Client
+website       = http://gaim.sourceforge.net/
+scrape        = http://prdownloads.sourceforge.net/gaim/
+version       = gaim-([0-9]\.[0-9]\.[0-9]).exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/gaim/
+filename      = gaim-#VERSION#.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = Gaim
+uninstparam   = /S _?=#INSTALL_DIR#
 
 [Putty]
 
@@ -46,6 +61,40 @@ upgrades      = true
 chinstdir     = /dir="#INSTALL_DIR#"
 uninstall     = PuTTY_is1
 uninstparam   = /sp- /silent /norestart
+
+[Thunderbird]
+
+category      = Internet
+describe      = Mail Client
+website       = http://www.getthunderbird.com
+scrape        = http://releases.mozilla.org/pub/mozilla.org/thunderbird/releases/
+version       = ([0-9]\.[0-9]+[.0-9]*)/
+download      = ftp://ftp.mozilla.org/pub/mozilla.org/thunderbird/releases/#VERSION#/win32/en-US/
+filename      = Thunderbird Setup #VERSION#.exe
+instparam     = -ms
+upgrades      = true
+chinstdir     =
+uninstall     = Mozilla Thunderbird (#MAJORMINOR_VERSION#)
+uninstparam   = -ms
+
+; #############################
+; Entertainment
+; #############################
+
+[VideoLAN]
+
+category      = Entertainment
+describe      = Video Player
+website       = http://www.videolan.org/
+scrape        = http://mirrors.optralan.com/videolan/vlc
+version       = /([0-9]\.[0-9]\.[0-9][a-z]?)/
+download      = http://mirrors.optralan.com/videolan/vlc/#VERSION#/win32/
+filename      = vlc-#VERSION#-win32.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = VLC media player
+uninstparam   = /S _?=#INSTALL_DIR#
 
 ; #############################
 ; Productivity
@@ -115,6 +164,36 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; uninstall     = AppSnap
 ; uninstparam   = /S _?=#INSTALL_DIR#
 
+[CCleaner]
+
+category      = Utilities
+describe      = System Optimization
+website       = http://www.ccleaner.com/
+scrape        = http://www.ccleaner.com/versions.aspx
+version       = v([0-9]\.[0-9]+).
+download      = http://download.ccleaner.com/
+filename      = ccsetup#DOTLESS_VERSION#.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = CCleaner
+uninstparam   = /S _?=#INSTALL_DIR#
+
+[ClamWin]
+
+category      = Utilities
+describe      = Anti Virus
+website       = http://www.clamwin.com/
+scrape        = http://prdownloads.sourceforge.net/clamwin/
+version       = clamwin-([0-9]\.[0-9]+\.[0-9])-setup.exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/clamwin/
+filename      = clamwin-#VERSION#-setup.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = ClamWin Free Antivirus_is1
+uninstparam   = /sp- /silent /norestart
+
 [Clump]
 
 category      = Utilities
@@ -158,6 +237,7 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; upgrades      =
 ; chinstdir     =
 ; uninstall     =
+; uninstparam   =
 
 ; [Name of application]
 ; category      - Category of applications that this application belongs to
